...
        android:layout_height="584dp"

        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:layout_editor_absoluteX="-2dp" />

    <Button
        android:id="@+id/add_friend_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:layout_marginEnd="52dp"
        android:layout_marginBottom="72dp"
        android:text="ADD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/compass_view_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="16dp"
        android:text="SHOW"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/new_friend_public_code"
        android:layout_width="202dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="72dp"
        android:hint="Enter friend's UID"
        android:inputType="textPersonName"
...
