...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CompassActivity">

    <ImageView
        android:id="@+id/status_indicator"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/compass_screen_layout"
...
        android:text="zoom in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/zoom_out_button"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginEnd="216dp"
        android:layout_marginBottom="10dp"
        android:text="zoom out"
        app:layout_constraintBottom_toBottomOf="parent"
...
